Bytt navn på klumpen til behandlingsresultat og rydd opp i en del navn og felter
